# QRtistry

./: .gitignore  Cargo.toml  README.md
src/: app.rs  io.rs  main.rs  types.rs
src/BK/: main_backup.rs  main_bk_01.rs
src/qr/: colors.rs  drawing.rs  generator.rs  images.rs  mod.rs
src/ui/: helpers.rs  mod.rs  preview.rs  tabs.rs
