[package]
name = "qrtistry"
version = "0.2.2"
edition = "2021"

[dependencies]
image = "0.25.5"
qrcode = "0.14.1"
eframe = "0.30.0"
egui = "0.30.0"
rfd = "0.15.1"     # File dialogs
chrono = "0.4"      # For timestamps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For saving/loading presets
